# MACHIN_TURPING

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bin_add.txt  cmake_install.cmake  input.txt  testMT
Headers/: Alg_Tyring.h  Alg_Tyring.h.gch  Cecker.h.gch  ErrorHandler.h  ErrorHandler.h.gch  I_O_File.h  I_O_File.h.gch  Structures.h  Structures.h.gch  memoryUtils.h  memoryUtils.h.gch
src/: Checker.c  I_O_File.c  algTyr.c  algorithm.c  iofile  main.c  memoryUtils.c  utils.c
